# arxiv_auto_crawler

./: .gitignore  README.md  README.org  daily_crawl.py  download_file.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
config/: crawler_config.yaml  downloader_config.yaml
demo/: crawler_demo.py  downloader_demo.py
src/arxiv_auto_crawler/: __init__.py  daily_crawl.py  download_file.py
