[metadata]
name = arxiv_auto_crawler
version = 0.0.1
author = black_tears
author_email = 21860437@zju.edu.cn
description = Used for crawling arxiv papers automatically.
long_description = file: README.org
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src